[package]
name = "wallet-database"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/wallet_database.rs"

[dependencies.multiversx-sc]
version = "0.48.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.48.0"

[workspace]
members = [
    ".",
    "meta",
]
